--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
   width: 100%;
   overflow: hidden;
 }
+.color-change {
+  filter: hue-rotate(40deg) saturate(1.5);
+}
 .info{
   position: absolute;
   left: 20px;
@@ -27,7 +30,7 @@ body {
 }
 
 .container {
-  background-image: url("./assets/sky.png");
+  background-image: url("./assets/bg.jpeg");
   background-size: 100% 100%;
   background-position: center;
   display: flex;
@@ -47,8 +50,8 @@ body {
   margin: 10px;
   border-radius: 50px;
   /* background: #e0e0e0; */
-  box-shadow: 20px 20px 60px #bebebe,
-    -20px -20px 60px #ffffff;
+  /* box-shadow: 20px 20px 60px #bebebe,
+    -20px -20px 60px #ffffff; */
 }
 
 .searchBar {
